--- a/src/API/bilerplate.Api/appsettings.json
+++ b/src/API/bilerplate.Api/appsettings.json
@@ -16,9 +16,9 @@
   },
 
   "ConnectionStrings": {
-    "ApplicationConnectionString": "",
-    "IdentityConnectionString": "",
-    "HealthCheckConnectionString": ""
+    "ApplicationConnectionString": "Server=localhost;Port=5430;Database=Application;User Id=root;Password=root;",
+    "IdentityConnectionString": "Server=localhost;Port=5430;Database=identity;User Id=root;Password=root;",
+    "HealthCheckConnectionString": "Server=localhost;Port=5430;Database=HealthCheck;User Id=root;Password=root;"
   },
 
 
